--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -12,12 +12,16 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
       
+      - name: Setup Node
       - uses: actions/setup-node@v1
         with:
           node-version: 16
+      
       - name: Install Packages
-      - run: npm ci
-      - run: npm build
+        run: npm ci
+        
+      - name: Build   
+        run: npm build
 
 
       - name: Deploy 🚀
