--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -18,9 +18,9 @@ jobs:
           node-version: 16
       
       - name: Install and Build 🔨
-        run: yarn install
-        run: yarn build
-
+        run: |
+          yarn install
+          yarn build
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3.7.3
